--- a/namelist.in
+++ b/namelist.in
@@ -2,5 +2,7 @@
 	outputfile = '/tmp/output1.nc',
 	bin_model_file = 'bmm/namelist.basic',
 	diffusion_model_file = 'mbd/namelist.in',
-	koehler_shell_flag=1/
+	koehler_shell_flag=1/ ! either calculate equilibrium over particle using 
+	                      !average mole fraction of water: 0
+	                      !mole fraction of water in outer most shell: 1
  
