--- a/namelist.in
+++ b/namelist.in
@@ -1,13 +1,13 @@
 &dc_setup
-	kp=3,
+	kp=11,
 	n_comp=2/
 
 &dc_vars
-	molefrac(1:3)=0.2, 0.4, 0.6,	! water mole fraction
+	molefrac(1:11)=0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.,	! water mole fraction
 	t=250.,
 	d_self(1:2)=1.e-18, 1.e-9,	! organic, water
-	param='Lienhard2015',		! 'constant', 'darken', 'vignes', 'Lienhard2014', 'Lienhard2015'
-	compound='citric acid'/
+	param='Price2014',		! 'constant', 'darken', 'vignes', 'Lienhard2014', 'Lienhard2015', 'Price2014', 'Price2015', 'Shiraiwa2013',
+	compound='sucrose'/
 
 
 
@@ -41,11 +41,14 @@
 ! 'levoglucosan' [215-253K], 'levoglucosan/NH4HSO4' [200-263K], 'raffinose' [210-300K], '3-MBTCA' [240-300K], 'alpha-pinene' [190-300K], 'sucrose' [215-310K], 'citric acid' [223-290K], 'shikimic acid' [240-300K]
 !
 ! 'Price2014'
-!
+! http://www.atmos-chem-phys.net/14/3817/2014/
+! Price 2014 only finds the diffusion coefficients for water in sucrose, levoglucosan, MgSO4 and Raffinose at a temperature of 23.5+/-0.5degreeC or 298.65+/-0.5K.
 ! 'sucrose' [23.5degreeC],'levoglucosan' [23.5degreeC],'MgSO4' [23.5degreeC],'raffinose' [23.5degreeC]
 !
 ! 'Price2015'
-!
+! http://pubs.rsc.org/en/content/articlehtml/2015/sc/c5sc00685f [Paper]
+! http://www.rsc.org/suppdata/c5/sc/c5sc00685f/c5sc00685f1.pdf [Supplementary]
+! Price 2015 uses the parameterisation given in Lienhard 2014 to find the diffusion coefficient for alpha-pinene. Diffusion is measured in a disk.
 ! 'alpha-pinene' [240-280K]
 !
 ! 'Price2016' [296K]
@@ -57,3 +60,4 @@
 ! 'Shiraiwa2013'
 ! http://pubs.rsc.org/en/content/articlehtml/2013/cp/c3cp51595h
 ! Uses perculation theory to estimate the diffusion of water through 'alpha-pinene', depends upon the self-diffussion coefficients and the variables f [0.65-1.] and Z [8-16].
+! The diffussion coefficients are valid for 'alpha-pinene' between the water mole fractions [0.3-1.]
